# TopologicOptimizer

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  design_patterns.py  docker-compose.yml  freecad_fem_puller.py  pyproject.toml  pyvenv.cfg
TopologicOptimizer/core/: geometry.py  material.py
api/: Cargo.toml
api/src/: jobs.rs  main.rs  routes.rs  ws.rs
app/: CMakeLists.txt  main.cpp  main.py
core/: Cargo.toml
core/src/: error.rs  export.rs  fem.rs  filter.rs  lib.rs  mesh.rs  simp.rs
docs/: ClassDiagramm.drawio  Doxyfile
fem/: boundary_conditions.py  geometry.py  results.py  solver.py
freecad/: Cargo.toml
frontend/: health.html  index.html
optimizer/: SIMP.py
source/: CMakeLists.txt
source/Data/: CMakeLists.txt
source/Data/DataHandling/: CMakeLists.txt
source/Data/DataHandling/include/DataHandling/: DataHandler.hpp
source/Data/DataReader/: CMakeLists.txt  DataReader.cpp
source/Data/DataReader/include/DataReader/: DataReader.hpp
source/Data/DataWriter/: CMakeLists.txt  DataWriter.cpp
source/Data/DataWriter/include/DataWriter/: DataWriter.hpp
source/Graph/: CMakeLists.txt
source/Graph/Builder_Graph/: CMakeLists.txt
source/Graph/Builder_Graph/include/Builder_Graph/: Graph_Builder.hpp
source/Graph/DS_Graph/: CMakeLists.txt
source/Graph/DS_Graph/include/DS_Graph/: Edge.hpp  Graph.hpp  Node.hpp
src/: CMakeLists.txt
utils/: utils.py
