[workspace]
resolver = "2"
members = ["core", "api", "freecad"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"          # ✅ moved here
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tracing = "0.1"
nalgebra = "0.34.2"
tokio = { version = "1", features = ["full"] } 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }