[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "topo-server"
path = "src/main.rs"

[dependencies]
topo-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = { version = "0.8.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }